@@ -1,6 +1,6 @@
 {doctype}
 </a></option></select><!-- '"  /></a></option></select> {doctype} <!--  The desperate attempt to clean up some still open tags -->
-</script>
+</script></style>
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
